--- a/NeoGeo.qsf
+++ b/NeoGeo.qsf
@@ -54,3 +54,7 @@ source sys/sys.tcl
 source sys/sys_analog.tcl
 source files.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+
+#set_global_assignment -name VERILOG_MACRO "MISTER_DEBUG_NOHDMI=1"
+#set_global_assignment -name VERILOG_MACRO "MVS_ARCADE_LOAD=1"
+#set_global_assignment -name VERILOG_MACRO "NGCD_SUPPORT=1"
